objects/vlocity_cmt__AccountPriceAdjustment__c.object
<CustomObject>
    <description>Represents a specific discount, fee, override price or charge applied to a specific asset, contract or billing account. The price or adjustment indicates its provisioning status and dates such as the date it was applied to the customer&apos;s subscription as well as effective dates for limited time pricing.</description>
    <fields>
        <fullName>vlocity_cmt__AccountAppliedPromotionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For promotional pricing, identifies the applied promotion which provides this pricing.</description>
        <label>Applied Promotion</label>
        <referenceTo>vlocity_cmt__AccountAppliedPromotion__c</referenceTo>
        <relationshipLabel>Account Pricing</relationshipLabel>
        <relationshipName>AccountPricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AddedByUserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the user who added this price, charge or adjustment; typically for write-in price adjustments.</description>
        <label>Added By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdjustmentPricingVariableId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the adjustment pricing variable. Used for write-in price adjustments to identify details of how to calculate the adjustment. Must be an adjustment pricing variable that applies to the adjusted pricing variable also defined on this record. This value is null for pricing using a selected pricing element since the adjustment pricing variable is defined by the selected pricing element.</description>
        <label>Adjustment Pricing Variable</label>
        <referenceTo>vlocity_cmt__PricingVariable__c</referenceTo>
        <relationshipName>AccountPricingAdjustments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdjustmentValue__c</fullName>
        <description>For write-in percentage adjustments, the percentage value of the adjustment. For example, 5 for a 5% discount. This value is null for pricing using a selected pricing element since the adjustment value is defined by the selected pricing element.</description>
        <label>Adjustment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Amount__c</fullName>
        <description>For write-in prices, the new or overriding amount. For example, $100 USD. This value is null for pricing using a selected pricing element since the pricing amount is defined by the selected pricing element.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AppliedDate__c</fullName>
        <description>The date and time this price, charge or adjustment was applied to this customer&apos;s asset or assets.</description>
        <label>Date Applied</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AppliesTo__c</fullName>
        <description>Identifies to what the price, charge or adjustment is applied: to a specific asset, to multiple assets, to a contract or to an account.</description>
        <label>Applies To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Multiple Assets</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the asset to which the price, charge or adjustment is applied. Used when applied to a specific asset.</description>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Account Pricing</relationshipLabel>
        <relationshipName>AccountPricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BillingAccountId__c</fullName>
        <description>(Required) Identifies the account with billing/charging responsibility to which the price, charge or adjustment is applied.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Pricing</relationshipLabel>
        <relationshipName>AccountPricing</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CancellationDate__c</fullName>
        <description>Date when the customer&apos;s participation in the conditions required for this pricing was cancelled. Used especially when the customer chooses to cancel out of the conditions prematurely.</description>
        <label>Cancellation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CancellationReason__c</fullName>
        <label>Cancellation Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CancellationStatus__c</fullName>
        <description>Whether or not the customer has cancelled out of their participation in the conditions required for this pricing. Values such as &quot;Canceled&quot; and &quot;Not Canceled&quot;.</description>
        <label>Cancellation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Not Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the contract to which the price, charge or adjustment is applied. Used when applied to all assets within a contract.</description>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Account Pricing</relationshipLabel>
        <relationshipName>AccountPricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveEndDate__c</fullName>
        <description>End date of this price, charge or adjustment for this customer.</description>
        <label>Effective End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveStartDate__c</fullName>
        <description>Start date of this price, charge or adjustment for this customer.</description>
        <label>Effective Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverrideDefinitionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override Definition</label>
        <referenceTo>vlocity_cmt__OverrideDefinition__c</referenceTo>
        <relationshipLabel>Account Pricing</relationshipLabel>
        <relationshipName>AccountPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PriceListEntryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>(Optional) Id of the source price list entry when the pricing is based on a price list entry.</description>
        <label>Price List Entry</label>
        <referenceTo>vlocity_cmt__PriceListEntry__c</referenceTo>
        <relationshipName>AccountPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingElementGlobalKey__c</fullName>
        <description>For selected prices, charges or adjustments, the global key identifier of the selected pricing element. This global key reference is used to point to the currently active pricing element version among all the versions of this pricing element.</description>
        <externalId>true</externalId>
        <label>Pricing Element Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingElementVersionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For selected pricing adjustments, this identifies the pricing element version at the time it was selected.</description>
        <label>Pricing Element Version</label>
        <referenceTo>vlocity_cmt__PricingElement__c</referenceTo>
        <relationshipName>AccountPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingVariableCode__c</fullName>
        <description>Formula: The code of the adjusted pricing variable. This value is null for pricing using a selected pricing element since the adjusted pricing variable is defined by the selected pricing element.</description>
        <formula>vlocity_cmt__PricingVariableID__r.vlocity_cmt__Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjusted Pricing Variable Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingVariableID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the adjusted pricing variable. Used for write-in price adjustments to identify what price is adjusted. This value is null for pricing using a selected pricing element since the adjusted pricing variable is defined by the selected pricing element.</description>
        <label>Adjusted Pricing Variable</label>
        <referenceTo>vlocity_cmt__PricingVariable__c</referenceTo>
        <relationshipName>AccountPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PromotionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED. Use the Applied Promotion field to identify the promotion which is the source of this price or adjustment.</description>
        <label>Promotion</label>
        <referenceTo>vlocity_cmt__Promotion__c</referenceTo>
        <relationshipName>AccountPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProvisioningStatus__c</fullName>
        <description>The current provisioning, or fulfillment, status of this price, charge or adjustment with values such as Activated or Cancelled.</description>
        <label>Provisioning Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ReasonForCancellation__c</fullName>
        <description>Text describing the reason why the customer canceled their participation in the conditions required for this pricing.</description>
        <label>Reason for Cancellation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Sequence__c</fullName>
        <description>Sequence in which this price, charge or adjustment is applied to the customer&apos;s asset or assets. Used to properly calculate discounted pricing.</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Source__c</fullName>
        <description>The source of this price, charge or adjustment such as &quot;Agent&quot; for write-in adjustments, &quot;Promotion&quot; for promotional pricing, or &quot;Offer&quot; for offer-specific pricing.</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Policy Action</fullName>
                </value>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>ABP</fullName>
                </value>
                <value>
                    <fullName>Attribute Based Pricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TimePlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Plan</label>
        <referenceTo>vlocity_cmt__TimePlan__c</referenceTo>
        <relationshipLabel>Account Pricing</relationshipLabel>
        <relationshipName>AccountPricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TimePolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Policy</label>
        <referenceTo>vlocity_cmt__TimePolicy__c</referenceTo>
        <relationshipLabel>Account Pricing</relationshipLabel>
        <relationshipName>AccountPricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Pricing</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Pricing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>